--- a/BlackJackConsoleGameUnitTests/BlackJackConsoleGameUnitTests.csproj
+++ b/BlackJackConsoleGameUnitTests/BlackJackConsoleGameUnitTests.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E1E2BFAD-66C6-43C1-9D5C-DBADBEA73FA0}</ProjectGuid>
+    <ProjectGuid>{51878839-C248-4A7D-ADB3-553848E87795}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>BlackJackConsoleGame</RootNamespace>
-    <AssemblyName>BlackJackConsoleGame</AssemblyName>
+    <RootNamespace>BlackJackConsoleGameUnitTests</RootNamespace>
+    <AssemblyName>BlackJackConsoleGameUnitTests</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BlackJackGame.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
